--- a/V2/anees-photos/package.json
+++ b/V2/anees-photos/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "aws-sdk": "^2.213.1",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
+    "fast-sha256": "^1.1.0",
+    "js-sha256": "^0.9.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
