--- a/V2/anees-photos/tsconfig.json
+++ b/V2/anees-photos/tsconfig.json
@@ -9,8 +9,9 @@
     "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
     ],
+    "types": [ "node" ],
     "lib": [
       "es2017",
       "dom"
