--- a/V2/anees-photos/package.json
+++ b/V2/anees-photos/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "aws-sdk": "^2.213.1",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
     "fast-sha256": "^1.1.0",
